infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration  # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: expiration  # Label of the pod
    spec:
      containers:
      - name: expiration
        image: frasnym/expiration
