infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client  # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: client  # Label of the pod
    spec:
      containers:
      - name: client
        image: frasnym/client
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client # Tell which pod to given access to
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
