infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: expiration-redis # Label of the pod
    spec:
      containers:
      - name: expiration-redis
        image: redis
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis # Tell which pod to given access to
  ports:
  - name: db
    protocol: TCP
    port: 6379
    targetPort: 6379
