infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders  # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: orders  # Label of the pod
    spec:
      containers:
      - name: orders
        image: frasnym/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders # Tell which pod to given access to
  ports:
  - name: orders
    protocol: TCP
    port: 3000
    targetPort: 3000
