infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments  # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: payments  # Label of the pod
    spec:
      containers:
      - name: payments
        image: frasnym/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments # Tell which pod to given access to
  ports:
  - name: payments
    protocol: TCP
    port: 3000
    targetPort: 3000
