infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo # Tell deployment what pod to use
  template:
    metadata:
      labels:
        app: tickets-mongo # Label of the pod
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo # Tell which pod to given access to
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
